--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "dom",
       "dom.iterable",
       "esnext",
-      "ES2022"
+      // "ES2022"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -29,7 +29,7 @@
         "./*"
       ]
     },
-    "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
