--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-   "name": "next-express-ts",
-   "version": "0.1.0",
-   "private": true,
-   "type": "commonjs",
-   "scripts": {
-      "dev": "ts-node server-ssr.ts",
-      "build": "next build",
-      "start": "ts-node src/index.ts",
-      "export": "next export",
-      "lint": "next lint",
-      "typeorm": "typeorm-ts-node-commonjs"
-   },
-   "dependencies": {
-      "body-parser": "^1.20.2",
-      "compression": "^1.7.4",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "http": "^0.0.1-security",
-      "mssql": "^9.3.2",
-      "mysql": "^2.18.1",
-      "next": "14.0.4",
-      "passport": "^0.7.0",
-      "pg": "^8.4.0",
-      "react": "^18",
-      "react-dom": "^18",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.17"
-   },
-   "devDependencies": {
-      "@types/compression": "^1.7.5",
-      "@types/express": "^4.17.21",
-      "@types/node": "^16.11.10",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
-      "autoprefixer": "^10.0.1",
-      "eslint": "^8",
-      "eslint-config-next": "14.0.4",
-      "postcss": "^8",
-      "tailwindcss": "^3.3.0",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   }
+  "name": "next-express-ts",
+  "version": "0.1.0",
+  "private": true,
+  "type": "commonjs",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint",
+    "start-express": "ts-node ./src/server-ssr.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "mssql": "^9.3.2",
+    "mysql": "^2.18.1",
+    "next": "14.0.4",
+    "passport": "^0.7.0",
+    "pg": "^8.4.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.3.17"
+  },
+  "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^5.3.3"
+  }
 }
