--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -7,45 +8,47 @@
       "es5",
       "es6"
     ],
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "./build",
-    "sourceMap": true,
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
+    "skipLibCheck": false,
+    // "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    // "module": "esnext",
+    // "moduleResolution": "bundler",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmitHelpers": false,
     "jsx": "preserve",
     "incremental": true,
+    "noEmitHelpers": false,
     "plugins": [
       {
         "name": "next"
       }
     ],
-    // "module": "node16",
-    // "moduleResolution": "Bundler",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@routes/*": [
+        "./src/routes/*"
       ]
     },
-    // "module": "esnext",
-    // "moduleResolution": "node",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/config/types/*"
+    ],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true
+    "sourceMap": true,
+    "strict": false
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "next.config.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
